# Sleep

./: AGENT_SPEC.md  CONTRIBUTING.md  Cargo.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/features/: 20260622_PR1.md
.github/workflows/: branch-protection.yml  ci.yml  dev-feature-tracker.yml  dev-to-main-summary.yml  release-demo.yml  release-on-merge.yml
crates/aether-ai/: Cargo.toml
crates/aether-ai/src/: lib.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: incremental_lexer.rs  persistent_history.rs  render_prep.rs  simd_utils.rs
crates/aether-core/src/buffer/: piece_table.rs
crates/aether-core/src/workspace/: file_tree.rs
crates/aether-lsp/src/: incremental_sync.rs  server.rs
crates/aether-remote/: Cargo.toml
crates/aether-remote/src/: git.rs  lib.rs  remote_fs.rs  ssh.rs  tests.rs
crates/aether-render/src/: theme.rs  vscode_theme.rs
crates/aether-render/src/d2d/: brush_cache.rs  factory.rs  glass.rs  mod.rs  text.rs
crates/aether-shared/: Cargo.toml
crates/aether-shared/src/: settings.rs
crates/aether-win32/: Cargo.toml
crates/aether-win32/src/: activity_bar.rs  ai_panel.rs  dirty_rect.rs  editor.rs  git.rs  layout.rs  lib.rs  logging.rs  menu_bar.rs  render.rs  render_context.rs  settings.rs  ssh.rs  status_bar.rs  terminal.rs  theme.rs  window.rs
