[package]
name = "aether-win32"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aether-app"
path = "src/main.rs"

[lib]
name = "aether_win32"
path = "src/lib.rs"

[dependencies]
aether-core = { path = "../aether-core" }
aether-render = { path = "../aether-render" }
aether-ai = { path = "../aether-ai" }
aether-shared = { path = "../aether-shared" }
aether-remote = { path = "../aether-remote" }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_Graphics_Direct2D", "Win32_Graphics_DirectWrite", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_HiDpi", "Win32_UI_Accessibility", "Win32_UI_Input_Ime", "Win32_System_Console", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Memory", "Win32_System_IO"] }
